Latex setup according to project report guidelines

--- a/latex_report/bib.bib
+++ b/latex_report/bib.bib
@@ -11,12 +11,28 @@
 @comment{$ biblatex control file $}
 @comment{$ biblatex version 2.8 $}
 
+@techreport{data2017breach,
+	Author = {Public announcement by company},
+	Date-Added = {2018-04-24 19:55:56 +0000},
+	Date-Modified = {2018-04-24 20:12:28 +0000},
+	Institution = {4iQ},
+	Lastchecked = {24-Apr-2018},
+	Title = {A Downloadable Large Dataset of Username:Password Pairs},
+	Urldate = {https://medium.com/4iqdelvedeep/1-4-billion-clear-text-credentials-discovered-in-a-single-database-3131d0a1ae14},
+	Year = {2017}}
 
+@inproceedings{kelley2012guess,
+	Author = {Kelley, Patrick Gage and Komanduri, Saranga and Mazurek, Michelle L and Shay, Richard and Vidas, Timothy and Bauer, Lujo and Christin, Nicolas and Cranor, Lorrie Faith and Lopez, Julio},
+	Booktitle = {Security and Privacy (SP), 2012 IEEE Symposium on},
+	Organization = {IEEE},
+	Pages = {523--537},
+	Title = {Guess again (and again and again): Measuring password strength by simulating password-cracking algorithms},
+	Year = {2012}}
 
-@article{examplebib,
-	Author = {Some Author},
-	Date-Added = {2018-05-04 06:34:27 +0000},
-	Date-Modified = {2018-05-04 06:34:52 +0000},
-	Journal = {Some Journal},
-	Title = {Some Title},
-	Year = {1900}}
+@inproceedings{weir2009password,
+	Author = {Weir, Matt and Aggarwal, Sudhir and De Medeiros, Breno and Glodek, Bill},
+	Booktitle = {Security and Privacy, 2009 30th IEEE Symposium on},
+	Organization = {IEEE},
+	Pages = {391--405},
+	Title = {Password cracking using probabilistic context-free grammars},
+	Year = {2009}}
