--- a/latex_report/preamble.tex
+++ b/latex_report/preamble.tex
@@ -1,12 +1,13 @@
 
-\usepackage[papersize={8.27in,11.69in},hmargin=0.5in,tmargin=0.7in,bmargin=0.6in,includehead,twoside,bindingoffset=0.3in]{geometry}
+\usepackage[papersize={8.27in,11.69in},hmargin=0.5in,tmargin=1.055in,bmargin=1.055in,includehead]{geometry}
 % paper size if 6in x 9in which is standard international size
 % margin from top is 0.7in including header
 % margin from bottom is 0.6in including footer
 % book of two sided pages is specified, with horizontal margin of 0.6in
 % binding offset is an additional 0.1in from centre fold.
 % REAL textwidth is therefore 6 - 2*0.6 -0.1 = 4.7in = 11.938cm, 0.45\textwidth = 5.3721 cm with 3 margins of 0.3979cm
-
+\usepackage{multicol}
+\setlength{\columnsep}{0.27in}
 %
 \usepackage[
     backend=bibtex,
