--- a/latex_report/report.tex
+++ b/latex_report/report.tex
@@ -1,14 +1,49 @@
-\documentclass{article}%[openany]
+\documentclass{article}
 
-\input{Preamble}% no \include here possible!
-
-
-
+\input{Preamble}
+\usepackage{lipsum}
+\AtBeginDocument{\renewcommand{\bibname}{\centerline References}}
 \begin{document}
 
-\input{title}
+{
+	\centering
+	\vspace{1cm}
+	{\scshape\Huge\ [TITLE TBD] \par}
+	\vspace{1cm}
+	{\scshape\Large --- \par}
+	\vspace{0.9cm}
+	\begin{center}{Mohammed Al-Jaff, Albin Stjena, Pontus, J Hamish M Darbyshire}\\
+	Uppsala University, Uppsala, Sweden
+	\end{center}
+}
 
-\section*{Summary}
+\begin{multicols}{2}
+
+\section*{\centering Abstract}
+
+\textbf{ \textit { We do something with some data }}
+
+\section*{\centering Background}
+
+\section*{\centering Methods}
+\subsection*{\centering Data Formats}
+In December 2017 it was publicly announced by 4iQ, a US digital security company, \cite{data2017breach} that a large database of plaintext username password pairs was downloadable from the world wide web. The validity of the dataset is noted by its prominent status amongst hacking communities and the anecdotal evidence that one of the author's username password pairs was correctly identified in addition to one of our colleagues! However, we also suspect many passwords to be outdated, and some must be considered fake as the result of failed phishing attacks. We make no attempt to verify the integrity of all of the data and do not believe a lack of full integrity to have any meaningful impact on our results. 
+\par Our raw dataset, then, is a series of plaintext files, organised within a hierarchical directory, sorted alphabetically by the initial characters of any given file. There are approximately 700 files of variable file size. Each line of every file is a specific datapoint and comprises a username-password pair with a colon separator. For example, 'joe@someaccount.com:joespassword1' is a line entry in a file that would be assigned to the directory structure '/j/o/'. Collectively there are approximately 1.4 billion lines to process.
+\par [\_\_INPUT\_\_ on what drive do we store the data and why choose that?]
+
+\subsubsection*{Initial Map Reduce}
+We will employ Apache Spark [\_\_CITE\_\_] to initially process the data with a generic map-reduce operation designed to discard usernames and record a count of each password detected in the dataset. 
+
+\subsection*{\centering Computational Experiments}
+
+\section*{\centering Results}
+
+\section*{\centering Discussion}
+\cite{kelley2012guess} \cite{weir2009password}
+
+\section*{\centering Conclusion}
+
+{\color{red}
 
 We plan to source and store a large number of username-password files. We will batch process this data using distributed computing to map reduce the file into password-count pairs. We will develop a malleable high level interface to extract information from the map reduced file, saving results to disk in a manageable way.  We will use Apache Spark and discuss its effectiveness.
 
@@ -26,11 +61,12 @@ We source a data set consisting of 1.4 billion clear text password and username 
 \item Discuss expectations and challenges if the dataset was much larger.
 
 \end{enumerate}
+}
 
 
 
 %Some citation example \cite{examplebib}
-
 \printbibliography
 
+\end{multicols}
 \end{document}
