Add reference for Spark, use sectsty for \centering

--- a/latex_report/bib.bib
+++ b/latex_report/bib.bib
@@ -2,10 +2,10 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Hamish at 2018-05-04 08:35:02 +0200 
+%% Created for Hamish at 2018-05-04 08:35:02 +0200
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
 @comment{$ biblatex control file $}
@@ -36,3 +36,22 @@
 	Pages = {391--405},
 	Title = {Password cracking using probabilistic context-free grammars},
 	Year = {2009}}
+
+@article{apache-spark,
+ author = {Zaharia, Matei and Xin, Reynold S. and Wendell, Patrick and Das, Tathagata and Armbrust, Michael and Dave, Ankur and Meng, Xiangrui and Rosen, Josh and Venkataraman, Shivaram and Franklin, Michael J. and Ghodsi, Ali and Gonzalez, Joseph and Shenker, Scott and Stoica, Ion},
+ title = {Apache Spark: A Unified Engine for Big Data Processing},
+ journal = {Commun. ACM},
+ issue_date = {November 2016},
+ volume = {59},
+ number = {11},
+ month = oct,
+ year = {2016},
+ issn = {0001-0782},
+ pages = {56--65},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2934664},
+ doi = {10.1145/2934664},
+ acmid = {2934664},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
