--- a/latex_report/preamble.tex
+++ b/latex_report/preamble.tex
@@ -1,4 +1,3 @@
-
 \usepackage[papersize={8.27in,11.69in},hmargin=0.5in,tmargin=1.055in,bmargin=1.055in,includehead]{geometry}
 % paper size if 6in x 9in which is standard international size
 % margin from top is 0.7in including header
@@ -11,7 +10,7 @@
 %
 \usepackage[
     backend=bibtex,
-    %backend=biber, 
+    %backend=biber,
     natbib=true,
     style=numeric,
     sorting=none,
@@ -65,7 +64,7 @@
 %%% TIKZ Predefinitions
 \usetikzlibrary{patterns}
 \usetikzlibrary{decorations}
-\tikzstyle{block} = 
+\tikzstyle{block} =
     [rectangle, draw
      % , fill=blue!20
       , text width=7.5em
@@ -74,7 +73,7 @@
       , rounded corners
       , minimum height=2em
       , scale =0.8]
-\tikzstyle{blockL} = 
+\tikzstyle{blockL} =
     [rectangle, draw
      % , fill=blue!20
       , text width=7.5em
@@ -83,7 +82,7 @@
       , rounded corners
       , minimum height=2em
       , scale =0.8]
-\tikzstyle{block20} = 
+\tikzstyle{block20} =
     [rectangle, draw
      % , fill=blue!20
       , text width=9em
@@ -92,7 +91,7 @@
       , rounded corners
       , minimum height=2em
       , scale =0.8]
-      \tikzstyle{block40} = 
+      \tikzstyle{block40} =
     [rectangle, draw
      % , fill=blue!20
       , text width=10.5em
@@ -101,7 +100,7 @@
       , rounded corners
       , minimum height=2em
       , scale =0.8]
- \tikzstyle{Vblock} = 
+ \tikzstyle{Vblock} =
     [rectangle, draw=none
      % , fill=blue!20
       , text width=15em
@@ -110,7 +109,7 @@
       , rounded corners
       , minimum height=2em
       , scale =0.8]
-\tikzstyle{Lblock} = 
+\tikzstyle{Lblock} =
     [rectangle, draw
      % , fill=blue!20
       , text width=35em
@@ -122,3 +121,6 @@
 \tikzstyle{virtual} = [coordinate]
 %%%%%%%%%%%%%%%%%%%%
 
+\usepackage{sectsty}
+\sectionfont{\centering}
+\subsectionfont{\centering}
