Add network plots to the report

--- a/latex_report/preamble.tex
+++ b/latex_report/preamble.tex
@@ -124,3 +124,7 @@
 \usepackage{sectsty}
 \sectionfont{\centering}
 \subsectionfont{\centering}
+\usepackage{float} % for helping figures in twocol environ with [H]
+\usepackage[font=small,labelfont=bf,textfont=it]{caption} % for caption text that
+                                              % can be at all discerned
+                                              % from normal text
