Correct bw graph generation, dump analysis run stderr

--- a/Statistics and analysis.ipynb
+++ b/Statistics and analysis.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {
     "scrolled": true
    },
@@ -505,8 +505,16 @@
     "    axs[0].set_xlabel(\"Driver Node (HDFS)\")\n",
     "    axs[1].set_xlabel(\"File Server Node (NFS)\")\n",
     "    axs[0].legend()\n",
-    "    plt.tight_layout()"
+    "    plt.tight_layout()\n",
+    "    pp.savefig()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
